--- a/p.css
+++ b/p.css
@@ -10,13 +10,17 @@
 body {
     height: 100vh;
     width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     background: linear-gradient(#2196f3, #e91e63);
+    overflow: hidden;
 }
 
 .bubbles {
     display: flex;
     position: absolute;
-    bottom: -100;
+    bottom: -100px;
     width: 100%;
     justify-content: space-around;
 }
@@ -26,10 +30,10 @@ body {
     width: 60px;
     background: rgba(255, 255, 255, 0.1);
     animation: move 10s linear infinite;
+    /* Keep this to apply the animation */
     position: relative;
     overflow: hidden;
-    box-shadow: 0 20px 50px rgba(0, 0, 0, 0.15);
-    backdrop-filter: blur(5px);
+
 }
 
 @keyframes move {
@@ -70,8 +74,9 @@ body {
 
 .bubbles span.seven {
     animation-delay: 3;
-    transform: scale(1.5);
+    transform: scale(1.5)
 }
+
 
 .bubbles span:before {
     content: '';
@@ -83,4 +88,81 @@ body {
     transform: skew(45deg) translateX(150px);
     background: rgba(255, 255, 255, 0.15);
     animation: mirror 3s linear infinite;
+}
+
+@keyframes mirror {
+    100% {
+        transform: translateX(-450px);
+    }
+}
+
+.bubbles span.one:before {
+    animation-delay: 1.5s;
+}
+
+.bubbles span.two:before {
+    animation-delay: 3.5s;
+}
+
+.bubbles span.three:before {
+    animation-delay: 2.5s;
+}
+
+.bubbles span.four:before {
+    animation-delay: 7.5s;
+}
+
+.bubbles span.five:before {
+    animation-delay: 4.5s;
+}
+
+.bubbles span.six:before {
+    animation-delay: 0.5s;
+}
+
+.bubbles span.seven:before {
+    animation-delay: 6s;
+}
+
+.container {
+    z-index: 12;
+    width: 360px;
+    padding: 15px;
+    border-radius: 12px;
+    background: rgba(255, 255, 255, 0.1);
+    box-shadow: 0 20px 50px rgba(0, 0, 0, 0.15);
+    border-top: 1px solid rgba(255, 255, 255, 0.5);
+    border-left: 1px solid rgba(255, 255, 255, 0.5);
+}
+
+.container input[type="text"] {
+    width: 100%;
+    height: 100px;
+    margin: 0 3px;
+    outline: none;
+    border: none;
+    color: #fff;
+    font-size: 20px;
+    text-align: right;
+    padding-right: 10px;
+    pointer-events: none;
+    background: transparent;
+}
+
+.container input[type="button"] {
+    height: 65px;
+    color: #fff;
+    width: calc(100% / 4 - 5px);
+    background: transparent;
+    border-radius: 12px;
+    margin-top: 15px;
+    outline: none;
+    border: none;
+    font-size: 20px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.container input[type="button"]:hover {
+    background: rgba(255, 255, 255, 0.1);
 }
